src/test/run-pass/issue-2316.rs
use rustc;
import rustc::middle::ty;
fn main() {
  let _t: ty::sty = rustc::middle::ty::ty_nil;
}
