src/test/compile-fail/reserved-dec.rs
// error-pattern:reserved keyword

fn main() {
  let int dec = 0;
}
